[package]
name = "imbl"
version = "4.0.1"
authors = ["Bodil Stokke <bodil@bodil.org>", "Joe Neeman <joeneeman@gmail.com>"]
edition = "2018"
license = "MPL-2.0+"
rust-version = "1.76"
description = "Immutable collection datatypes"
repository = "https://github.com/jneem/imbl"
documentation = "https://docs.rs/imbl"
homepage = "https://github.com/jneem/imbl"
readme = "./README.md"
categories = ["data-structures"]
keywords = ["immutable", "persistent", "hamt", "b-tree", "rrb-tree"]
exclude = [
    "dist/**",
    "rc/**",
    "release.toml",
    "Makefile.toml",
    "proptest-regressions/**",
]

[package.metadata.docs.rs]
all-features = true

[lib]
path = "./src/lib.rs"

[build-dependencies]
version_check = "0.9"

[features]
debug = []
small-chunks = []
triomphe = ["archery/triomphe"]

[dependencies]
bitmaps = "3"
imbl-sized-chunks = "0.1.3"
rand_core = "0.6.3"
rand_xoshiro = "0.6"
archery = "1.2.1"
quickcheck = { version = "1.0", optional = true }
proptest = { version = "1.0", optional = true }
serde = { version = "1", optional = true }
rayon = { version = "1", optional = true }
refpool = { version = "0.4", optional = true }
arbitrary = { version = "1.0", optional = true }

[dev-dependencies]
proptest = "1.0"
serde = "1"
serde_json = "1"
rayon = "1"
rand = { version = "0.8", features = ["small_rng"] }
pretty_assertions = "1.0"
metrohash = "1"
proptest-derive = "0.5"
static_assertions = "1.1.0"
